--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 <div class="card rounded-xl p-6 shadow-lg">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/01f357b5-7d2b-4844-9ab3-8793f9d04aa8.png" alt="Modern A4 photo frame with white matte border showcasing family portrait" class="w-full rounded-lg mb-4">
                     <h3 class="text-2xl font-semibold mb-2">A4 Frame (8x12)</h3>
-                    <div class="price-badge inline-block px-4 py-1 rounded-full font-bold mb-4">₹299</div>
+                    <div class="price-badge inline-block px-4 py-1 rounded-full font-bold mb-4">₹349/-</div>
                     <p class="mb-4">Perfect for standard photos and certificates</p>
-                    <button class="book-btn bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg transition" data-size="A4 (8x12)" data-price="299">Book Now</button>
+                    <button class="book-btn bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg transition" data-size="A4 (8x12)" data-price="349/-">Book Now</button>
                 </div>
                 
                 <div class="card rounded-xl p-6 shadow-lg">
