--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <div class="card rounded-xl p-6 shadow-lg">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/5d336495-1ce6-473b-bc4f-9ec79c2c19ac.png" alt="Elegant A3 frame in wooden finish displaying landscape photo" class="w-full rounded-lg mb-4">
                     <h3 class="text-2xl font-semibold mb-2">A3 Frame (12x18)</h3>
-                    <div class="price-badge inline-block px-4 py-1 rounded-full font-bold mb-4">₹499</div>
+                    <div class="price-badge inline-block px-4 py-1 rounded-full font-bold mb-4">₹549</div>
                     <p class="mb-4">Ideal for larger photos and artwork</p>
-                    <button class="book-btn bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg transition" data-size="A3 (12x18)" data-price="499">Book Now</button>
+                    <button class="book-btn bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg transition" data-size="A3 (12x18)" data-price="549">Book Now</button>
                 </div>
                 
                 <div class="card rounded-xl p-6 shadow-lg">
@@ -92,9 +92,9 @@
                 <div class="card rounded-xl p-6 shadow-lg">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/222920c3-3d7e-4c4e-91f9-5b6ff56e46fb.png" alt="High-quality 20x30 frame with modern metal design displaying cityscape" class="w-full rounded-lg mb-4">
                     <h3 class="text-2xl font-semibold mb-2">20x30 Frame</h3>
-                    <div class="price-badge inline-block px-4 py-1 rounded-full font-bold mb-4">₹1599</div>
+                    <div class="price-badge inline-block px-4 py-1 rounded-full font-bold mb-4">₹2299</div>
                     <p class="mb-4">Large format for impressive display</p>
-                    <button class="book-btn bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg transition" data-size="20x30" data-price="1599">Book Now</button>
+                    <button class="book-btn bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg transition" data-size="20x30" data-price="₹2299">Book Now</button>
                 </div>
                 
                 <div class="card rounded-xl p-6 shadow-lg">
